# _examples/13openapi/handler/ListArticle.go
@@ -27,12 +27,13 @@ func ListArticle(getProvider func(*http.Request) (*http.Request, Provider, error
 			}
 		}
 		var queryParams struct {
-			limit *int `query:"limit"`
+			limit *int              `query:"limit"`
+			sort  *design.SortOrder `query:"sort"`
 		}
 		if err := runtime.BindQuery(&queryParams, req); err != nil {
 			_ = err // ignored
 		}
-		result, err := design.ListArticle(ctx, db, queryParams.limit)
+		result, err := design.ListArticle(ctx, db, queryParams.limit, queryParams.sort)
 		runtime.HandleResult(w, req, result, err)
 	}
 }
